# reporule

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml  publish-docs.yaml  publish-pypi-test.yaml  publish-pypi.yaml
docs/source/: conf.py  index.rst  usage.md
docs/source/_static/: custom.css
requirements/: dev-requirements.txt  requirements.txt
src/reichlab/: __init__.py  __main__.py  greeting.py  logging.py  main.py
src/reichlab/data/: repo_list.py  repos_archived.yml
src/reichlab/entrypoints/: cli.py
src/reichlab/repo/: __init__.py
src/reichlab_utils/: __init__.py  __main__.py  app.py  logging.py
src/reporule/: __init__.py  __main__.py  core.py  greeting.py  logging.py  main.py  util.py
src/reporule/data/: default_branch_protections.json  repos.yml  repos_exception.yml
src/reporule/entrypoints/: cli.py
src/reporule/repo/: list.py  ruleset.py  security.py
src/reporule/util/: repo.py  ruleset.py  session.py
test/: conftest.py  test_app.py
test/repo/: test_ruleset_command.py
test/unit/: test_core.py  test_util.py
test/unit/data/: exceptions.yml
test/unit/repo/: test_list_command.py  test_ruleset_command.py
