[project]
name = "reichlab"
dynamic = ["version"]
description = "A hodgepodge CLI to automate various Reich Lab tasks"
authors = [{name = "Becky Sweger"}]
maintainers = [{name = "Becky Sweger"}]
license = {text = "MIT License"}

requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "rich",
    "structlog",
    "typer",
]

[dependency-groups]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "pytest-random-order>=1.1.1",
    "ruff",
]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxext-opengraph>=0.9.1",
]

[project.entry-points.console_scripts]
repo-rulesets = "reichlab.entrypoints.cli:main"

[project.urls]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = "--random-order"
testpaths = [
    "test",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
